--- a/views/delete-confirm.hbs
+++ b/views/delete-confirm.hbs
@@ -1,6 +1,7 @@
 <h1>你確定要刪除此支出紀錄？</h1>
 
 <div style="border: 1px solid #aaaaaa;">
+    <i class="fa-solid fa-{{ record.icon }}"></i>
     <p>{{ record.name }}</p>
     <p>{{ record.date }}</p>
     <p>{{ record.amount }}</p>
