feat: user can fast-login with facebook account

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -29,6 +29,13 @@
 </div>
 
 <div>
+    <span>使用Facebook快速登入</span>
+    <a href="/oauth2/login/facebook">
+        <button>前往Facebook登入</button>
+    </a>
+</div>
+
+<div>
     <span>還沒有帳號嗎？</span>
     <a href="/register">
         <button>前往註冊</button>
