--- a/views/register.hbs
+++ b/views/register.hbs
@@ -47,6 +47,13 @@
 </div>
 
 <div>
+    <span>使用Facebook快速登入</span>
+    <a href="/oauth2/login/facebook">
+        <button>前往Facebook登入</button>
+    </a>
+</div>
+
+<div>
     <span>已經有帳號了嗎？</span>
     <a href="/login">
         <button>前往登入</button>
