--- a/views/delete-confirm.hbs
+++ b/views/delete-confirm.hbs
@@ -1,26 +1,47 @@
 {{> message}}
-
-<h1>你確定要刪除此支出紀錄？</h1>
-
-<div style="border: 1px solid #aaaaaa;">
-    <i class="fa-solid fa-{{ record.icon }}"></i>
-    <p>{{ record.name }}</p>
-    <p>{{ record.date }}</p>
-    <p>{{ record.amount }}</p>
-</div>
-
-<div>
-
-    <div>
-        <form action="/records/{{record.id}}/?_method=DELETE" method="post">
-            <button type="submit">刪除</button>
-        </form>
+<div class="container">
+    <div class="row my-3">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            <div class="col-12">
+                <h1 class="text-center">你確定要刪除此支出紀錄？</h1>
+            </div>
+        </div>
     </div>
 
-    <div>
-        <a href="/records">
-            <button>返回</button>
-        </a>
+    <div class="row mb-3">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body d-flex">
+                        <div class="d-flex align-items-center">
+                            <i class="fa-solid fa-{{record.icon}} fa-2xl p-2"></i>
+                        </div>
+                        <div>
+                            <h5 class="card-title mb-2">{{record.name}}</h5>
+                            <h6 class="card-subtitle text-muted">{{record.date}}</h6>
+                        </div>
+                        <div class="ms-auto d-flex align-items-center">
+                            <p class="card-text p-2">{{record.amount}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
+    <div class="row">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            <div class="col-12 d-flex justify-content-center">
+                <div class="w-50">
+                    <div class="mb-3">
+                        <form action="/records/{{record.id}}/?_method=DELETE" method="post">
+                            <button type="submit" class="btn btn-lg btn-danger w-100">刪除</button>
+                        </form>
+                    </div>
+
+                    {{> back-to-index}}
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
