--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,40 +1,86 @@
 {{> message}}
 
-<div>
-    <p>總金額：</p>
-    <p style="font-size: 2rem;">{{ totalAmount }}</p>
-</div>
-
-<div class="dropdown mb-3">
-    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        類別
-    </button>
-    <ul class="dropdown-menu">
-        {{#each categories as |category|}}
-        <li><a class="dropdown-item" href="/records/filtered-by/{{category.name}}">{{category.name}}</a></li>
-        {{/each}}
-    </ul>
-</div>
-
-<div>
-    {{#each records as |record|}}
-    <div style="border: 1px solid #aaaaaa;">
-        <i class="fa-solid fa-{{ record.icon }}"></i>
-        <p>{{ record.name }}</p>
-        <p>{{ record.date }}</p>
-        <p>{{ record.amount }}</p>
+<div class="container">
+    <div class="row my-3">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            <div class="col-md-8">
+                <div class="d-grid dropdown">
+                    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        類別
+                    </button>
+                    <ul class="dropdown-menu w-100">
+                        {{#each categories as |category|}}
+                        <li><a class="dropdown-item" href="/records/filtered-by/{{category.name}}">{{category.name}}</a>
+                        </li>
+                        {{/each}}
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
-    <a href="/records/{{ record.id }}/edit">
-        <button>修改</button>
-    </a>
-    <a href="/records/{{ record.id }}/delete-confirm">
-        <button>刪除</button>
-    </a>
-    {{/each}}
-</div>
 
-<div>
-    <a href="/records/new">
-        <button>新增支出</button>
-    </a>
+    <div class="row mb-3">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            <div class="col-md-8">
+                <div class="d-flex">
+                    <div class="d-flex align-items-center">
+                        <span>總金額：</span>
+                    </div>
+                    <div class="mx-auto">
+                        <span class="display-1">{{totalAmount}}</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            {{#each records as |record|}}
+            <div class="col-md-8 mb-md-3 mb-1">
+                <div class="card">
+                    <div class="card-body d-flex">
+                        <div class="d-flex align-items-center">
+                            <i class="fa-solid fa-{{ record.icon }} fa-2xl p-2"></i>
+                        </div>
+                        <div>
+                            <h5 class="card-title mb-2">{{record.name}}</h5>
+                            <h6 class="card-subtitle text-muted">{{record.date}}</h6>
+                        </div>
+                        <div class="ms-auto d-flex align-items-center">
+                            <p class="card-text p-2">{{record.amount}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex align-items-center mb-md-3 mb-3">
+                <div class="me-2">
+                    <a href="/records/{{ record.id }}/edit">
+                        <button class="btn btn-light">修改</button>
+                    </a>
+                </div>
+                <div>
+                    <a href="/records/{{ record.id }}/delete-confirm">
+                        <button class="btn btn-light">刪除</button>
+                    </a>
+                </div>
+            </div>
+            {{/each}}
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            <div class="col-md-8 d-flex justify-content-center">
+                <a href="/records/new" class="d-block w-50">
+                    <button class="btn btn-lg btn-light w-100">新增支出</button>
+                </a>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+    </div>
+
 </div>
