--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,43 +1,73 @@
-<h1>登入</h1>
+<div class="d-flex">
+    <div class="login-bg-img d-sm-none d-md-block" style=" background-image: url('{{backgroundImg}}') "></div>
 
-{{> message}}
+    <div class="container login-input-container login-input-vertical-alignment">
 
-<div>
-    <form action="/login" method="post">
-        <div>
-            <div>
-                <label for="email">電子郵件*</label>
+        <div class="row mb-3">
+
+            <div class="col-md-8 col-xl-6 mx-auto">
+
+                <h1 class="mb-3">登入</h1>
+
+                {{> message}}
+
+                <div class="mb-3">
+                    <form action="/login" method="post">
+                        <div class="form-floating mb-3">
+                            <input type="email" id="email" class="form-control" name="email" required>
+                            <label for="email">電子郵件*</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="password" id="password" class="form-control" name="password" required>
+                            <label for="password">密碼*</label>
+                        </div>
+
+                        <div class="d-grid">
+                            <button type="submit" class="btn btn-light">登入</button>
+                        </div>
+                    </form>
+                </div>
+
+                <div>
+                    <span>還沒有帳號嗎？</span>
+                    <a href="/register" class="d-grid text-decoration-none">
+                        <button class="btn btn-light">前往註冊</button>
+                    </a>
+                </div>
+
             </div>
-            <div>
-                <input type="email" id="email" name="email" placeholder="請輸入電子郵件..." required>
-            </div>
+
         </div>
 
-        <div>
-            <div>
-                <label for="password">密碼*</label>
+        <div class="row mb-3">
+
+            <div class="col-md-8 col-xl-6 mx-auto">
+
+                <div class="position-relative">
+                    <hr>
+                    <span
+                        class="position-absolute top-50 start-50 translate-middle login-option-separator-content">or</span>
+                </div>
+
             </div>
-            <div>
-                <input type="password" id="password" name="password" placeholder="請輸入密碼..." required>
-            </div>
+
         </div>
 
-        <div>
-            <button type="submit">登入</button>
+        <div class="row">
+
+            <div class="col-md-8 col-xl-6 mx-auto">
+
+                <div>
+                    <a href="/oauth2/login/facebook" class="d-grid text-decoration-none">
+                        <button class="btn btn-light">Facebook快速登入</button>
+                    </a>
+                </div>
+
+            </div>
+
         </div>
-    </form>
-</div>
 
-<div>
-    <span>使用Facebook快速登入</span>
-    <a href="/oauth2/login/facebook">
-        <button>前往Facebook登入</button>
-    </a>
-</div>
+    </div>
 
-<div>
-    <span>還沒有帳號嗎？</span>
-    <a href="/register">
-        <button>前往註冊</button>
-    </a>
 </div>
