--- a/views/partials/logout-btn.hbs
+++ b/views/partials/logout-btn.hbs
@@ -1,5 +1,5 @@
 <div>
     <form action="/logout" method="post">
-        <button type="submit" class="btn btn-danger">登出</button>
+        <button type="submit" class="btn btn-light text-danger">登出</button>
     </form>
 </div>
