--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -1,10 +1,10 @@
 {{#if success_msg}}
-<div class="alert alert-success" role="alert">
+<div class="alert alert-success mb-5 text-center" role="alert">
     {{success_msg}}
 </div>
 {{/if}}
 {{#if error_msg}}
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-danger mb-5 text-center" role="alert">
     {{error_msg}}
 </div>
 {{/if}}
