--- a/views/filtered-records.hbs
+++ b/views/filtered-records.hbs
@@ -83,13 +83,42 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-3">
         <div class="row col-md-8 col-xl-6 mx-auto">
             <div class="col-md-8 d-flex justify-content-center">
                 <div class="w-50">
                     {{> back-to-index}}
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            <div class="col-md-8 d-flex justify-content-center">
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <a class="page-link text-secondary" href="/records/filtered-by/{{categoryName}}?page={{prevPage}}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {{#each pageBtnArr as |pageBtn|}}
+                        <li
+                            class="page-item {{#if pageBtn.isActive}} active {{/if}} {{#if pageBtn.isDisabled}} disabled {{/if}}">
+                            <a class="page-link {{#if pageBtn.isActive}} {{else}} text-secondary {{/if}}"
+                                href="/records/filtered-by/{{../categoryName}}?page={{pageBtn.pageNum}}">{{pageBtn.pageNum}}</a>
+                        </li>
+                        {{/each}}
+                        <li class="page-item">
+                            <a class="page-link text-secondary" href="/records/filtered-by/{{categoryName}}?page={{nextPage}}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-md-4"></div>
         </div>
     </div>
 
