--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,12 +72,40 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-5">
         <div class="row col-md-8 col-xl-6 mx-auto">
             <div class="col-md-8 d-flex justify-content-center">
                 <a href="/records/new" class="d-block w-50">
                     <button class="btn btn-lg btn-light w-100">新增支出</button>
                 </a>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="row col-md-8 col-xl-6 mx-auto">
+            <div class="col-md-8 d-flex justify-content-center">
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <a class="page-link text-secondary" href="/records?page={{prevPage}}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        {{#each pageBtnArr as |pageBtn|}}
+                        <li class="page-item {{#if pageBtn.isActive}} active {{/if}} {{#if pageBtn.isDisabled}} disabled {{/if}}">
+                            <a class="page-link {{#if pageBtn.isActive}} {{else}} text-secondary {{/if}}"
+                                href="/records?page={{pageBtn.pageNum}}">{{pageBtn.pageNum}}</a>
+                        </li>
+                        {{/each}}
+                        <li class="page-item">
+                            <a class="page-link text-secondary" href="/records?page={{nextPage}}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
             <div class="col-md-4"></div>
         </div>
